--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -67,6 +67,7 @@ section {
   box-shadow: 0 2px 8px rgba(0,0,0,0.03);
   margin-bottom: 2rem;
   padding: 2rem 1.5rem;
+  scroll-margin-top: 20rem;
 }
 section h2 {
   margin-top: 0;
